# AntobotSDK

./: .gitmodules  LICENSE  README.md
am_bno055_imu/: CMakeLists.txt  package.xml
am_control/: CMakeLists.txt  package.xml
am_control/config/big_robot/: controllers.yaml  hardware.yaml  joint_limits.yaml
am_control/config/small_robot/: controllers.yaml  hardware.yaml  joint_limits.yaml
am_control/include/am_control/: am_control.h  am_hardware.h
am_control/launch/: ATWAS_controller.launch  CP1_controller.launch  VP1_controller.launch
am_control/src/: am_control.cpp  am_control_node.cpp
antobot_base/: CMakeLists.txt  README.md  package.xml
antobot_base/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
antobot_base/catkin_generated/installspace/: antobot_base.pc  antobot_baseConfig.cmake
antobot_base/config/ant/: controllers.yaml
antobot_base/config/small_robot/: controllers.yaml  hardware.yaml  joint_limits.yaml
antobot_base/include/antobot_base/: ant_hardware.h  antobot_control.h  antobot_hardware.h
antobot_base/launch/: VP1_controller.launch  ant_controller.launch
antobot_base/src/: antobot_control.cpp  antobot_control_node.cpp
antobot_descriptions/antobot_ant_description/: CMakeLists.txt  package.xml
antobot_descriptions/antobot_ant_description/launch/: ant_param.launch  view_model.launch
antobot_descriptions/antobot_ant_description/rviz/: model.rviz
antobot_descriptions/antobot_ant_description/urdf/: ant.urdf.xacro  zed2.urdf.xacro  zed2_back.urdf.xacro
antobot_gazebo/: CMakeLists.txt  README.md  package.xml
antobot_gazebo/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
antobot_gazebo/catkin_generated/installspace/: antobot_gazebo.pc  antobot_gazeboConfig.cmake
antobot_gazebo/launch/: ant_sim.launch  windsor_ant_v1.launch  windsor_ant_v2.launch  windsor_ant_v3.launch
antobot_gazebo/launch/settings/: ant_v1_windsorSettings.launch  ant_v2_windsorSettings.launch  ant_v3_windsorSettings.launch
antobot_gazebo/models/windsor_terrain/: model.config  model.sdf
antobot_gazebo/models/windsor_terrain/meshes/: windsor_terrain.dae
antobot_gazebo/models/windsor_tree_1/: model.config  model.sdf
antobot_gazebo/models/windsor_tree_1/meshes/: windsor_tree_1.dae
antobot_gazebo/models/windsor_tree_2/: model.config  model.sdf
antobot_gazebo/models/windsor_tree_2/meshes/: windsor_tree_2.dae
antobot_gazebo/models/windsor_tree_3/: model.config  model.sdf
antobot_gazebo/models/windsor_tree_3/meshes/: windsor_tree_3.dae
antobot_gazebo/models/windsor_tree_4/: model.config  model.sdf
antobot_gazebo/models/windsor_tree_4/meshes/: windsor_tree_4.dae
antobot_gazebo/rviz/: ant_v1_sensors.rviz  ant_v2_sensors.rviz
antobot_gazebo/rviz/ant/: model.rviz
antobot_gazebo/rviz/big_robot/: sensors.rviz
antobot_gazebo/rviz/small_robot/: sensors.rviz
antobot_gazebo/rviz/vp1/: localCostmapOnly.rviz
antobot_gazebo/src/: simSensors.py
antobot_gazebo/worlds/: empty.world  farm.world  windsor.world
antobot_hmi/: Readme.md  (+3 more)
antobot_localisation/antobot_gps/: CMakeLists.txt  README.md  package.xml  setup.py
antobot_localisation/antobot_gps/config/: device-161949e0-d39d-4684-a3b9-93660827246d-pp-cert.crt  device-161949e0-d39d-4684-a3b9-93660827246d-pp-key.pem  ppp_config.yaml
antobot_localisation/antobot_gps/src/: am_gps_nRTK.py  am_gps_spark.py  am_gps_urcu_old.py  antobot_gps.py  antobot_gps_node.py  gps_base_station.py  gps_config.py  gps_ppp.py
antobot_localisation/antobot_gps/src/am_gps_urcu/: ublox_gps.py
antobot_localisation/antobot_heading/: CMakeLists.txt  README.md  package.xml
antobot_localisation/antobot_heading/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
antobot_localisation/antobot_heading/catkin_generated/installspace/: antobot_heading.pc  antobot_headingConfig.cmake
antobot_localisation/antobot_heading/launch/: .heading_launcher.launch.swp  antobot_heading_launcher.launch  auto_calibration_cpp.launch  auto_calibration_python.launch  heading_auto_calib.launch  heading_dual_gps.launch  heading_imu_calib.launch  heading_launcher.launch
antobot_localisation/antobot_heading/scripts/: antobot_heading_ekf_launcher.py  antobot_heading_launcher.py  antobot_heading_node.py  heading_auto_calib.py
antobot_localisation/antobot_heading/src/: .heading_launcher.py.swp  antobot_heading.cpp  antobot_heading_node.cpp  heading_auto_calib.py  heading_dual_gps.py  heading_imu_calib.py  heading_launcher.py  heading_launcher_new.py
antobot_localisation/antobot_heading_cpp/: CMakeLists.txt  README.md  package.xml
antobot_localisation/antobot_heading_cpp/launch/: auto_calibration_cpp.launch  auto_calibration_python.launch  auto_launch.launch
antobot_localisation/antobot_heading_cpp/scripts/: heading_auto_calib.py  heading_launcher.py
antobot_localisation/antobot_heading_cpp/src/: am_heading.cpp  am_heading_node.cpp  antobot_heading.cpp  antobot_heading_node.cpp
antobot_msgs/: CMakeLists.txt  README.md  package.xml
antobot_msgs/catkin_generated/: antobot_msgs-msg-extras.cmake.develspace.in  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
antobot_msgs/catkin_generated/installspace/: antobot_msgs-msg-extras.cmake  antobot_msgs-msg-paths.cmake  antobot_msgs.pc  antobot_msgsConfig.cmake
antobot_msgs/cmake/: antobot_msgs-genmsg-context.py  antobot_msgs-genmsg.cmake
antobot_msgs/msg/: Bool.msg
antobot_msgs/srv/: antoRec.srv  camManager.srv  softshutdown.srv
antobot_navigation/: CMakeLists.txt  README.md  package.xml
antobot_navigation/launch/: antobot_sensors.launch  lslidar_double_c32_c16.launch  move_base.launch  move_base_sim.launch  pointcloud_to_laser.launch  pointcloud_to_laser_sim.launch
antobot_navigation/params/: base_planners_params.yaml  costmap_common_params.yaml  costmap_common_params_sim.yaml  global_costmap_params.yaml  laser_config.yaml  local_costmap_params.yaml  move_base_params.yaml  standalone_costmap.yaml  standalone_global_costmap.yaml
(+197 files in other folders)
