<?xml version="1.0"?>
<!-- based on slaterobotics' implementation https://medium.com/@slaterobotics/how-to-implement-ros-control-on-a-custom-robot-748b52751f2e -->
<package>
  <name>antobot_base</name>
  <version>0.0.1</version>
  <description>Provides the hardware definition and interfaces for antobot</description>

  <maintainer email="daniel.freer@antobot.ai">Daniel Freer</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>antobot_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>antobot_msgs</run_depend>

</package>
