<package>
  <name>antobot_gazebo</name>
  <version>0.0.1</version>
  <description>
     antobot simulation package
  </description>
  <author>Daniel Freer</author>
  <author email="daniel.freer@antobot.ai">Daniel Freer</author>
  <maintainer email="daniel.freer@antobot.ai">Daniel Freer</maintainer>
  <license>BSD</license>
  <url type="website">http:///</url>
  <url type="repository">http:///</url>
  <url type="bugtracker">http:///</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <!-- <build_depend>keyboard_teleop</build_depend> -->

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <!-- <run_depend>create_description</run_depend> -->
  <run_depend>hector_gazebo_plugins</run_depend>
  <!-- <run_depend>keyboard_teleop</run_depend> -->
  
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
  
</package>
