<package>
  <name>antobot_gazebo</name>
  <version>0.0.1</version>
   <description>The gazebo simulation package for Antobot robots</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="william.eaton@antobot.ai">Will</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <!-- <build_depend>keyboard_teleop</build_depend> -->

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <!-- <run_depend>create_description</run_depend> -->
  <run_depend>hector_gazebo_plugins</run_depend>
  <!-- <run_depend>keyboard_teleop</run_depend> -->
  <run_depend>gazebo_ros</run_depend>
  
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
  </export>
  
</package>
