<?xml version="1.0"?>
<package format="2">
  <name>antobot_navigation</name>
  <version>0.0.0</version>
  <description>The antobot_navigation package</description>
  <maintainer email="soyoung.kim@antobot.ai">So-Young Kim</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
</package>
