<?xml version="1.0"?>
<package format="2">
  <name>antobot_ant_description</name>
  <version>0.0.0</version>
  <description>The description package for the ant robot platform</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="william.eaton@antobot.ai">Will</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
