<?xml version="1.0"?>
<package format="2">
  <name>antobot_heading</name>
  <version>0.0.0</version>
  <description>The antobot_heading package</description>

  <maintainer email="soyoung.kim@antobot.ai">So-Young Kim</maintainer>

  <license>BSD</license>

  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>geonav_transform</depend>
  <depend>tf2_geometry_msgs</depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
