<?xml version="1.0"?>
<package format="2">
  <name>antobot_heading_cpp</name>
  <version>0.0.0</version>
  <description>The antobot_heading_cpp package</description>

  <maintainer email="soyoung@antobot.ai">So-Young Kim</maintainer>

  <license>TODO</license>

  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>geonav_transform</depend>
  <depend>tf2_geometry_msgs</depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
